feat: for deployment

--- a/index.html
+++ b/index.html
@@ -40,9 +40,15 @@
         <!-- Job Title Container -->
         <div class="jobTitleContainer dark">
           <h2 class="jobTitle">A Web Developer</h2>
-        </div>
-        <div class="jobTitleContainer purple">
-          <h2 class="jobTitle">And Video Editor</h2>
+          <div class="mountainContainer1">
+            <img src="./img/mountain.svg" alt="" class="mountainImg1" />
+          </div>
+          <div class="mountainContainer2">
+            <img src="./img/mountain.svg" alt="" class="mountainImg2" />
+          </div>
+          <div class="moonContainer">
+            <img src="./img/moon.svg" alt="" class="moonImg" />
+          </div>
         </div>
       </div>
       <!-- Projects -->
@@ -61,20 +67,16 @@
           <div class="projectDetail">
             <h1 class="projectTitle">Citecode</h1>
             <p class="projectDesc">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora,
-              nobis maiores assumenda quisquam aliquid unde repellat tempore,
-              numquam veniam earum soluta neque accusantium fugiat quas iure
-              consequatur delectus nemo. Exercitationem.
+              A Student Attendance Application using qr code to scan and verify
+              students who attended in the event. The application works online
+              and offline by caching the data.
             </p>
             <div class="buttonContainer">
-              <a href="/next.html" class="projectButton" target="_blank"
-                >View Github</a
-              >
               <a
-                href="https://github.com/your-repository-2"
-                class="projectButtonApk"
+                href="https://github.com/japoy143/qr-app.git"
+                class="projectButton"
                 target="_blank"
-                >Download Apk</a
+                >View Github</a
               >
             </div>
           </div>
@@ -92,17 +94,20 @@
           <div class="projectDetail">
             <h1 class="projectTitle">Recently</h1>
             <p class="projectDesc">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora,
-              nobis maiores assumenda quisquam aliquid unde repellat tempore,
-              numquam veniam earum soluta neque accusantium fugiat quas iure
-              consequatur delectus nemo. Exercitationem.
+              Recently a blog website is a dynamic platform where you can share
+              your latest ideas, thoughts, and insights with a global audience.
+              Whether you’re passionate about technology, lifestyle, travel, or
+              any other topic.
             </p>
             <div class="buttonContainer">
-              <a href="/next.html" class="projectButton" target="_blank"
+              <a
+                href="https://github.com/japoy143/blogsite.git"
+                class="projectButton"
+                target="_blank"
                 >View Github</a
               >
               <a
-                href="https://github.com/your-repository-2"
+                href="https://recently.42web.io/"
                 class="projectButtonWebsite"
                 target="_blank"
                 >View Site</a
@@ -123,17 +128,21 @@
           <div class="projectDetail">
             <h1 class="projectTitle">API Hunt</h1>
             <p class="projectDesc">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora,
-              nobis maiores assumenda quisquam aliquid unde repellat tempore,
-              numquam veniam earum soluta neque accusantium fugiat quas iure
-              consequatur delectus nemo. Exercitationem.
+              The API Hunt is a powerful web app that provides an extensive
+              library of free APIs across various categories, designed to
+              inspire and support developers in building innovative projects.
+              Whether you're creating a new application, enhancing an existing
+              one, or experimenting with new ideas.
             </p>
             <div class="buttonContainer">
-              <a href="/next.html" class="projectButton" target="_blank"
+              <a
+                href="https://github.com/japoy143/api_hunt.git"
+                class="projectButton"
+                target="_blank"
                 >View Github</a
               >
               <a
-                href="https://github.com/your-repository-2"
+                href="https://vercel-api-hunt-y8ha.vercel.app/"
                 class="projectButtonWebsite"
                 target="_blank"
                 >View Site</a
@@ -153,20 +162,17 @@
           <div class="projectDetail">
             <h1 class="projectTitle">Netcoin</h1>
             <p class="projectDesc">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora,
-              nobis maiores assumenda quisquam aliquid unde repellat tempore,
-              numquam veniam earum soluta neque accusantium fugiat quas iure
-              consequatur delectus nemo. Exercitationem.
+              The Netcoin app is a crypto currency app that will show real-time
+              prices. The app can be use to convert crypto currency value to
+              dollar prices. The app has statistics also for the 24 hour changes
+              of the price.
             </p>
             <div class="buttonContainer">
-              <a href="/next.html" class="projectButton" target="_blank"
-                >View Github</a
-              >
               <a
-                href="https://github.com/your-repository-2"
+                href="https://github.com/japoy143/netcoin_app.git"
                 class="projectButton"
                 target="_blank"
-                >Download APK</a
+                >View Github</a
               >
             </div>
           </div>
@@ -175,6 +181,17 @@
       <!-- Github -->
       <div class="githubContainer">
         <h1 class="githubTitle">Want to see all project?</h1>
+        <div class="githubLinks">
+          <a href="mailto:rainierlesondato143@gmail.com">
+            <img src="./img/gmail_gray.png"
+          /></a>
+          <a href="https://github.com/japoy143">
+            <img src="./img/github_gray.png"
+          /></a>
+          <a href="https://www.linkedin.com/in/rainierlesondato/">
+            <img src="./img/linkedin_gray.png"
+          /></a>
+        </div>
         <div class="githubCharts">
           <div class="dates">
             <span>Jan</span>
@@ -194,6 +211,18 @@
           <div class="boxContainer"></div>
           <h1 class="githubTitle">ON GITHUB</h1>
         </div>
+      </div>
+
+      <div class="contactContainer">
+        <a href="mailto:rainierlesondato143@gmail.com">
+          <img src="./img/gmail.png"
+        /></a>
+        <a href="https://github.com/japoy143">
+          <img src="./img/github.png"
+        /></a>
+        <a href="https://www.linkedin.com/in/rainierlesondato/">
+          <img src="./img/linkedin.png"
+        /></a>
       </div>
     </div>
   </body>
