feat:deployment update

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                 >View Github</a
               >
               <a
-                href="https://recently.42web.io/"
+                href="http://www.recently.42web.io/"
                 class="projectButtonWebsite"
                 target="_blank"
                 >View Site</a
@@ -215,13 +215,14 @@
       </div>
 
       <div class="contactContainer">
-        <a href="mailto:rainierlesondato143@gmail.com">
+        <img src="./img/gmail.png" id="mail" />
+        <a href="mailto:rainierlesondato143@gmail.com" target="_blank">
           <img src="./img/gmail.png"
         /></a>
-        <a href="https://github.com/japoy143">
+        <a href="https://github.com/japoy143" target="_blank">
           <img src="./img/github.png"
         /></a>
-        <a href="https://www.linkedin.com/in/rainierlesondato/">
+        <a href="https://www.linkedin.com/in/rainierlesondato/" target="_blank">
           <img src="./img/linkedin.png"
         /></a>
       </div>
